--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@ data-template="vertical-menu-template-starter">
      <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
      <script src="assets/js/config.js"></script> 
 
-    <title>Avera Labs</title>
+    <title>Avera Admin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
