--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,14 @@ data-template="vertical-menu-template-starter">
      <link rel="stylesheet" href="assets/vendor/libs/typeahead-js/typeahead.css" />
      <link rel="stylesheet" href="assets/vendor/libs/fullcalendar/fullcalendar.css" /> 
      <link rel="stylesheet" href="assets/vendor/libs/sweetalert2/sweetalert2.css" />
-     <link rel="stylesheet" href="assets/vendor/libs/flatpickr/flatpickr.css" /> 
+     <link rel="stylesheet" href="assets/vendor/libs/flatpickr/flatpickr.css" />  
+
+     <link rel="stylesheet" href="assets/vendor/libs/datatables-bs5/datatables.bootstrap5.css" />
+     <link rel="stylesheet" href="assets/vendor/libs/datatables-responsive-bs5/responsive.bootstrap5.css" />
+     <link rel="stylesheet" href="assets/vendor/libs/datatables-checkboxes-jquery/datatables.checkboxes.css" />
+     <link rel="stylesheet" href="assets/vendor/libs/datatables-buttons-bs5/buttons.bootstrap5.css" />
+
+     <link rel="stylesheet" href="assets/vendor/libs/datatables-rowgroup-bs5/rowgroup.bootstrap5.css" />
 
      <link rel="stylesheet" href="assets/vendor/libs/select2/select2.css" />
      <link rel="stylesheet" href="assets/vendor/libs/quill/editor.css" />
@@ -123,14 +130,19 @@ data-template="vertical-menu-template-starter">
     <script src="assets/vendor/libs/pdfmake/pdfmake.js"></script>
     <script src="assets/vendor/libs/datatables-buttons/buttons.html5.js"></script>
     <script src="assets/vendor/libs/datatables-buttons/buttons.print.js"></script>
-    <script src="assets/vendor/libs/select2/select2.js"></script>
+    <script src="assets/vendor/libs/select2/select2.js"></script> 
+
+    <script src="assets/vendor/libs/datatables-rowgroup/datatables.rowgroup.js"></script>
+    <script src="assets/vendor/libs/datatables-rowgroup-bs5/rowgroup.bootstrap5.js"></script>
 
     <script src="assets/vendor/libs/fullcalendar/fullcalendar.js"></script>
 
     <script src="assets/vendor/libs/cleavejs/cleave.js"></script>
     <script src="assets/vendor/libs/formvalidation/dist/js/FormValidation.min.js"></script>
     <script src="assets/vendor/libs/formvalidation/dist/js/plugins/Bootstrap5.min.js"></script>
-    <script src="assets/vendor/libs/formvalidation/dist/js/plugins/AutoFocus.min.js"></script> 
+    <script src="assets/vendor/libs/formvalidation/dist/js/plugins/AutoFocus.min.js"></script>  
+
+    <script src="assets/js/tables-datatables-basic.js"></script>
 
     <script src="assets/vendor/libs/flatpickr/flatpickr.js"></script> 
     
